fix input disabled styles on iOS

--- a/components/input/input.module.css
+++ b/components/input/input.module.css
@@ -61,6 +61,8 @@
   background: var(--accent-1);
   color: var(--accent-4);
   cursor: not-allowed;
+  opacity: 1;
+  -webkit-text-fill-color: var(--accent-4);
 }
 
 .input::placeholder,
